# vulkan_engine2_core

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  vcpkg.json
include/vke/: fwd.hpp  pipeline_files.hpp  pipeline_loader.hpp  util.hpp  vke.hpp  vke_builders.hpp
libs/: VkBootstrap.cpp  VkBootstrap.h  vk_mem_alloc_imp.cpp
pch/: pch.hpp
src/: buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  commandbuffer.cpp  commandbuffer.hpp  common.hpp  descriptor_pool.cpp  descriptor_pool.hpp  fence.cpp  fence.hpp  fwd.hpp  image.cpp  image.hpp  image_load.cpp  image_view.cpp  image_view.hpp  isubpass.hpp  pipeline.cpp  pipeline.hpp  semaphore.cpp  semaphore.hpp  vk_resource.cpp  vk_resource.hpp  vkutil.cpp  vkutil.hpp  vulkan_context.cpp  vulkan_context.hpp
src/builders/: descriptor_set_builder.cpp  descriptor_set_builder.hpp  descriptor_set_layout_builder.cpp  descriptor_set_layout_builder.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_layout_builder.cpp  pipeline_layout_builder.hpp  vertex_input_builder.hpp
src/debug/: gpu_timer.cpp  gpu_timer.hpp
src/pipeline/: ipipeline.cpp  ipipeline.hpp  pipeline.cpp  pipeline.hpp
src/pipeline/builders/: pipeline_builder.cpp  pipeline_builder.hpp  (+3 more)
src/renderpass/: frame_buffer.cpp  frame_buffer.hpp  multi_pass_renderpass.cpp  multi_pass_renderpass.hpp  renderpass.cpp  renderpass.hpp  renderpass_builder.cpp  renderpass_builder.hpp  windowed_renderpass.cpp  windowed_renderpass.hpp
src/shader_reflection/: pipeline_reflection.cpp  pipeline_reflection.hpp  spv_reflect_util.hpp
src/sparse_resources/: growable_buffer.cpp  growable_buffer.hpp
src/util/: arena_alloc.cpp  arena_alloc.hpp  function_timer.cpp  function_timer.hpp  hash_map.hpp  hash_util.hpp  id_manager.hpp  md_array.hpp  slim_vec.hpp  stencil_buffer.cpp  stencil_buffer.hpp  util.cpp  util.hpp  virtual_allocator.cpp  virtual_allocator.hpp
src/window/: surface.cpp  surface.hpp  window.cpp  window.hpp
(+29 files in other folders)
